@@ -1,70 +1,79 @@
 package com.backendWebshop.backendWebshop.service;
 
-import com.backendWebshop.backendWebshop.exception.ResourceNotFoundException;
+
 import com.backendWebshop.backendWebshop.model.Product;
 import com.backendWebshop.backendWebshop.repository.ProductRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.boot.test.context.SpringBootTest;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-
-/*JAG FÅR INTE TILL DET!! JAG SKA ÅTERKOMNMA TILL DENNA NÄR DET ANDRA ÄR KLART!!!*/
-
 @ExtendWith(MockitoExtension.class)
+@SpringBootTest
 public class ProductServiceTest {
 
-    @Mock
     private ProductRepository productRepository;
 
-    @InjectMocks
     private ProductService productService;
 
     @BeforeEach
-    public void setUp() {
-        MockitoAnnotations.openMocks(this);
+    void setUp() {
+        productRepository = Mockito.mock(ProductRepository.class);
+        productService = new ProductService(productRepository);
     }
 
     @Test
-    public void testGetAllProducts() {
+    void getAllProducts_shouldReturnEmptyList_whenNoProductsExist() {
+        when(productRepository.findAll()).thenReturn(Collections.emptyList());
+    
+        List<Product> result = productService.getAllProducts();
+    
+        assertTrue((result).isEmpty());
+        verify(productRepository).findAll();
+    }
+
+    @Test
+    void getAllProducts_shouldReturnListWithOneProduct_whenOnlyOneProductInRepository() {
         // Arrange
-        Product product1 = new Product();
-        product1.setId("1");
-        product1.setName("Product 1");
-
-        Product product2 = new Product();
-        product2.setId("2");
-        product2.setName("Product 2");
-
-        when(productRepository.findAll()).thenReturn(Arrays.asList(product1, product2));
-
+        Product product = new Product();
+        when(productRepository.findAll()).thenReturn(List.of(product));
+    
         // Act
-        List<Product> products = productService.getAllProducts();
-
+        List<Product> result = productService.getAllProducts();
+    
         // Assert
-        assertNotNull(products);
-        assertEquals("Product 1", products.get(0).getName());
-        assertEquals("Product 2", products.get(1).getName());
+        assertEquals(1, result.size());
+        assertEquals(product, result.get(0));
+        verify(productRepository, times(1)).findAll();
     }
 
     @Test
-    public void testGetProductById_InvalidId() {
+    void getAllProducts_shouldReturnListWithMultipleProducts_whenMultipleProductsExist() {
         // Arrange
-        String invalidId = "invalidId";
-
-        // Act & Assert
-        assertThrows(ResourceNotFoundException.class, () -> {
-            productService.getProductById(invalidId);
-        });
+        List<Product> expectedProducts = Arrays.asList(
+            new Product("1", "Product 1", "Description 1", 10.0),
+            new Product("2", "Product 2", "Description 2", 20.0),
+            new Product("3", "Product 3", "Description 3", 30.0)
+        );
+        when(productRepository.findAll()).thenReturn(expectedProducts);
+    
+        // Act
+        List<Product> actualProducts = productService.getAllProducts();
+    
+        // Assert
+        assertEquals(expectedProducts.size(), actualProducts.size());
+        assertEquals(expectedProducts, actualProducts);
+        verify(productRepository, times(1)).findAll();
     }
 
 }
